<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/tips"
            android:textSize="18sp"
            android:textColor="#0079ff"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/content_bkg">

            <EditText
                android:id="@+id/student_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textColor="#333"
                android:textColorHint="#999"
                android:hint="@string/id"/>

            <EditText
                android:id="@+id/student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textColor="#333"
                android:textColorHint="#999"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/student_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:textColor="#333"
                android:textColorHint="#999"
                android:hint="@string/age"/>

            <EditText
                android:id="@+id/student_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:textColor="#333"
                android:textColorHint="#999"
                android:hint="@string/score"/>
        </LinearLayout>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add"/>

        <Button
            android:id="@+id/show_students_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add"/>
    </LinearLayout>
</ScrollView>